[gd_scene load_steps=10 format=3 uid="uid://bow8etlgl7o1t"]

[ext_resource type="PackedScene" uid="uid://br1g73r857b0c" path="res://entity/entity.tscn" id="1_b6taw"]
[ext_resource type="Script" path="res://entity/playable_characters/playable_character.gd" id="2_elgsj"]
[ext_resource type="PackedScene" path="res://entity/playable_characters/void/void_drop_effect.tscn" id="3_apilw"]
[ext_resource type="Script" path="res://other/entity_stats.gd" id="4_mqvhk"]

[sub_resource type="Resource" id="Resource_pq5ma"]
resource_local_to_scene = true
script = ExtResource("4_mqvhk")
walking_speed = null
walking_acceleration = null
walking_deceleration = null
hight_force_deceleration = null
knockback_resist = null
fall_damage = null

[sub_resource type="CapsuleShape2D" id="3"]
radius = 2.0
height = 4.0

[sub_resource type="GDScript" id="5"]
script/source = "extends Area2D

@onready var player = owner

var object_to_interact : Area2D = null
var last_object_to_interact : Area2D = null
var objects_in_area := []

func _ready():
	connect(\"area_entered\",Callable(self,\"on_area_entered\"))
	connect(\"area_exited\",Callable(self,\"on_area_exited\"))

func _physics_process(delta):
	object_to_interact = null
	var closest_distance = INF
	for object_in_area in objects_in_area:
		var current_distance = object_in_area.global_position.distance_to(player.global_position)
		if current_distance < closest_distance:
			closest_distance = current_distance
			object_to_interact = object_in_area
	
	if last_object_to_interact != object_to_interact:
		if is_instance_valid(object_to_interact):
			object_to_interact.sprite.material.set_shader_parameter(\"outline_width\", 1)
		if is_instance_valid(last_object_to_interact):
			last_object_to_interact.sprite.material.set_shader_parameter(\"outline_width\", 0)
	
	last_object_to_interact = object_to_interact

func on_area_entered(area : Area2D):
	objects_in_area.append(area)

func on_area_exited(area : Area2D):
	if objects_in_area.has(area):
		objects_in_area.erase(area)
"

[sub_resource type="CircleShape2D" id="2"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_xx4ih"]
radius = 5.0

[node name="Player" instance=ExtResource("1_b6taw")]
script = ExtResource("2_elgsj")
drop_effect = ExtResource("3_apilw")
stats = SubResource("Resource_pq5ma")
alignments = 1

[node name="CollisionShape2D" parent="." index="1"]
visible = false
rotation = 1.5708
shape = SubResource("3")

[node name="InventoryInstances" type="Node2D" parent="." index="2"]

[node name="Hitbox" parent="." index="3"]
visible = false

[node name="GroundDetector" parent="." index="4"]
visible = false

[node name="AreaOfInteraction" type="Area2D" parent="." index="5"]
visible = false
collision_layer = 0
collision_mask = 16
script = SubResource("5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaOfInteraction" index="0"]
shape = SubResource("2")

[node name="CollectableCollector" type="Area2D" parent="." index="6"]
visible = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectableCollector" index="0"]
shape = SubResource("CircleShape2D_xx4ih")
